# foris-controller-netboot-module

./: .gitlab-ci.yml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
foris_controller_backends/netboot/: __init__.py
foris_controller_modules/netboot/: __init__.py
foris_controller_modules/netboot/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/netboot/schema/: netboot.json
foris_controller_netboot_module/: __init__.py
foris_controller_netboot_module/observer/: __main__.py
tests/: __init__.py  conftest.py  test_netboot.py
